--- a/myStyle.css
+++ b/myStyle.css
@@ -1,26 +1,60 @@
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+}
 
 /* H1 tags */
 h1 { 
-    background-color: rgb(50, 28, 70);
-    color: white;
+
+    font-size: 1.25rem;
+    color: darkslateblue;
     }
 
-    /* H1 tags with class="city" */
-h1.city { 
-    background-color: rgb(94, 224, 18);
-    color: rgb(47, 16, 160);
-    }
+.sidebar {
+    width: 25%;
+    float: left;
+    text-align: center;
+    padding: 1rem;
+    box-sizing: border-box;
+}
 
-    /* class= "city" */
-.city {
-    background-color: tomato;
-    color: white;
-    padding: 10px;
-} 
-/* class= "city1" */
-.city1 {
-    background-color: rgb(255, 71, 111);
-    color: rgb(255, 168, 168);
-    padding: 30px;
-} 
+.main-section {
+    width: 75%;
+    float: left;
+    text-align: center;
+    padding: 1rem;
+    box-sizing: border-box;
+}
 
+.profile-img {
+    width: 100%;
+}
+
+h2 {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 0.25rem;
+    padding-bottom: 0;
+}
+
+.contact-form {
+    margin-bottom: 2rem;
+}
+
+p{
+    margin: 0;
+    padding-bottom: 0;
+}
+
+.text-input {
+    font-size: 1rem;
+    padding: 0.375rem .5rem;
+    margin: 3px;
+    border-radius: 8px;
+    border: solid 1px grey;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.w-100 {
+    width: 100%;
+}
